Add Gittrack project

--- a/index.html
+++ b/index.html
@@ -215,9 +215,11 @@
     <p class="revealFromOpacity">
       Découvrez quelques-unes de mes réalisations récentes dans le domaine du développement web, mobile et design.
     </p>
+  
+    <!-- Premier projet -->
     <div class="projectSection">
       <div class="imgProject revealFromLeft">
-        <img src="./Assets/pictures/sotw.webp" alt="" />
+        <img src="./Assets/pictures/sotw.webp" alt="Skill of the World" />
       </div>
       <div class="detailsProject revealFromRight">
         <h4>Skill of the World</h4>
@@ -227,8 +229,25 @@
         </p>
       </div>
     </div>
-    <!-- Pour ajouter d'autres projets, dupliquer la section .projectSection -->
+  
+    <!-- Deuxième projet -->
+    <div class="projectSection">
+      <div class="imgProject revealFromLeft">
+        <img src="./Assets/pictures/gittrack-bg.png" alt="Gittrack" />
+      </div>
+      <div class="detailsProject revealFromRight">
+        <h4>Gittrack</h4>
+        <p>
+          Gittrack est une application web développée avec Next.js et React, utilisant l'API de GitLab pour permettre aux
+          utilisateurs de suivre et gérer leurs projets, issues, et merge requests.
+          L'application offre une interface intuitive pour visualiser les données sous forme de tableaux de bord,
+          calendriers
+          interactifs, et diagrammes de Gantt.
+        </p>
+      </div>
+    </div>
   </section>
+
 
   <!-- TECHNOLOGIES -->
   <div class="caroussel revealFromOpacity">
