Add third project

--- a/index.html
+++ b/index.html
@@ -215,8 +215,28 @@
     <p class="revealFromOpacity">
       Découvrez quelques-unes de mes réalisations récentes dans le domaine du développement web, mobile et design.
     </p>
+
+  <!-- Premier projet -->
+  <div class="projectSection">
+    <div class="imgProject revealFromLeft">
+      <img src="./Assets/pictures/QPUC.png" alt="QPUC" />
+    </div>
+    <div class="detailsProject revealFromRight">
+      <h4>QPUC</h4>
+      <p>
+        QPUC (Question Pour Un Chrétien) est une application de jeu mobile développée en React Native avec une base de
+        données PostgreSQL.
+        Elle est conçue pour tester et enrichir les connaissances des utilisateurs sur la foi chrétienne à travers une
+        expérience interactive et engageante.
+        Actuellement, une connexion Internet est nécessaire pour accéder aux fonctionnalités du jeu et répondre aux
+        questions.<br /><br />
+        Un travail est en cours afin de rendre l’application utilisable en mode hors connexion, permettant ainsi aux
+        utilisateurs de profiter des quiz même sans accès réseau.
+      </p>
+    </div>
+  </div>
   
-    <!-- Premier projet -->
+    <!-- Deuxième projet -->
     <div class="projectSection">
       <div class="imgProject revealFromLeft">
         <img src="./Assets/pictures/sotw.webp" alt="Skill of the World" />
@@ -230,7 +250,7 @@
       </div>
     </div>
   
-    <!-- Deuxième projet -->
+    <!-- Troisième projet -->
     <div class="projectSection">
       <div class="imgProject revealFromLeft">
         <img src="./Assets/pictures/gittrack-bg.png" alt="Gittrack" />
@@ -246,6 +266,7 @@
         </p>
       </div>
     </div>
+
   </section>
 
 
